examples/negative/mutable/param_array_write_other_row.kai
# Negative fixture (#511 / Mutable contract): a fn declares
# `Stdout` in its row but writes through an Array parameter
# without adding `Mutable`. The typer must reject — having any
# other effect doesn't excuse the missing `Mutable`.

fn modify_with_stdout(a: Array[Int]) : Unit / Stdout {
  print("about to write")
  a[0] := 42
}

fn main() : Unit / Mutable + Console = {
  let a = array_make(3, 0)
  modify_with_stdout(a)
  print(int_to_string(a[0]))
}
